sfdx-source/main/default/objects/Triage__c/Triage__c.object-meta.xml
<CustomObject>
    <label>Triage</label>
    <nameField>
        <displayFormat>NT - {000000000}</displayFormat>
        <label>Nurse Triage Intake ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triage</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>