sfdx-source/main/default/objects/Triage__c/fields/CS_Patient_Screening__c.field-meta.xml
<CustomField>
    <fullName>CS_Patient_Screening__c</fullName>
    <label>CS_Patient Screening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>