sfdx-source/main/default/objects/Triage__c/fields/CS_Suicide_Risk_Label_1__c.field-meta.xml
<CustomField>
    <fullName>CS_Suicide_Risk_Label_1__c</fullName>
    <label>CS_Suicide Risk Label 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, the patient has a High Risk for Suicide Patient Record Flag.</fullName>
            </value>
            <value>
                <fullName
                >Yes, the patient presents with a behavioral health concern or warning signs that this Veteran may be at risk for suicide, even in the absence of a primary or
                    secondary diagnosis or a complaint of an emotional or behavioral disorder.</fullName>
                <label>Yes, the patient presents with a behavioral health concern or warning signs that this Veteran may be at risk for suicide, even in the absence of a primary or
                    secondary diagnosis or a complaint of an emotional or behavioral disorder.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>