sfdx-source/main/default/objects/Triage__c/fields/CS_Suicide_Risk_Label_2__c.field-meta.xml
<CustomField>
    <fullName>CS_Suicide_Risk_Label_2__c</fullName>
    <label>CS_Suicide Risk Label 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am not concerned</fullName>
                <default>true</default>
                <label>NO, I am not concerned.</label>
            </value>
            <value>
                <fullName>YES, I am concerned</fullName>
                <label>YES, I am concerned.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>