sfdx-source/main/default/objects/Triage__c/fields/Diastolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Diastolic_Blood_Pressure__c</fullName>
    <description>Part of Vitals Intake</description>
    <label>Diastolic Blood Pressure</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>