sfdx-source/main/default/objects/Triage__c/fields/E_M_Code__c.field-meta.xml
<CustomField>
    <fullName>E_M_Code__c</fullName>
    <label>E&amp;M Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99211^OFFICE O/P EST MINIMAL PROB</fullName>
                <default>true</default>
                <label>99211^OFFICE O/P EST MINIMAL PROB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>