sfdx-source/main/default/objects/Triage__c/fields/Encounter_String__c.field-meta.xml
<CustomField>
    <fullName>Encounter_String__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Encounter String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>