sfdx-source/main/default/objects/Triage__c/fields/Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>