sfdx-source/main/default/objects/Triage__c/fields/Feels_Safe__c.field-meta.xml
<CustomField>
    <fullName>Feels_Safe__c</fullName>
    <label>Feels Safe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (described in Nurse Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>