sfdx-source/main/default/objects/Triage__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Part of Vitals Intake</description>
    <label>Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;5&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;6&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;7&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;8&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;9&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;10&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;5&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;6&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;7&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;8&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;9&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;10&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;5&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>