sfdx-source/main/default/objects/Triage__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4775</fullName>
                <label>CC TXCW PACT BLUE TEAM RN</label>
            </value>
            <value>
                <fullName>4777</fullName>
                <label>CC TXCW PACT BROWN TEAM RN</label>
            </value>
            <value>
                <fullName>4779</fullName>
                <label>CC TXCW PACT GRAY TEAM RN</label>
            </value>
            <value>
                <fullName>4778</fullName>
                <label>CC TXCW PACT GREEN TEAM RN</label>
            </value>
            <value>
                <fullName>4776</fullName>
                <label>CC TXCW PACT ORANGE TEAM RN</label>
            </value>
            <value>
                <fullName>4774</fullName>
                <label>CC TXCW PACT PURPLE TEAM RN</label>
            </value>
            <value>
                <fullName>4772</fullName>
                <label>CC TXCW PACT TEAL TEAM RN</label>
            </value>
            <value>
                <fullName>4771</fullName>
                <label>CC TXCW PACT WHITE TEAM RN</label>
            </value>
            <value>
                <fullName>4768</fullName>
                <label>HRL TXCW PACT GRAY TEAM RN</label>
            </value>
            <value>
                <fullName>28391</fullName>
                <label>TO-PACT Focused Care Nurse</label>
            </value>
            <value>
                <fullName>4788</fullName>
                <label>MCA TXCW PACT BLUE RN</label>
            </value>
            <value>
                <fullName>28366</fullName>
                <label>TO-PACT Focused Care-NP</label>
            </value>
            <value>
                <fullName>4781</fullName>
                <label>MCA TXCW PACT FLOAT RN</label>
            </value>
            <value>
                <fullName>4757</fullName>
                <label>LAR TXCW PACT STEEL TEAM RN</label>
            </value>
            <value>
                <fullName>4762</fullName>
                <label>HRL TXCW PACT RED TEAM RN</label>
            </value>
            <value>
                <fullName>4756</fullName>
                <label>LAR TXCW WHITE TEAM RN</label>
            </value>
            <value>
                <fullName>4789</fullName>
                <label>MCA TXCW PACT GOLD RN</label>
            </value>
            <value>
                <fullName>4758</fullName>
                <label>LAR TXCW PACT RED TEAM RN</label>
            </value>
            <value>
                <fullName>4760</fullName>
                <label>HRL TXCW PACT YELLOW TEAM RN</label>
            </value>
            <value>
                <fullName>4812</fullName>
                <label>HRL TXCW TRAVELING VET RN</label>
            </value>
            <value>
                <fullName>4780</fullName>
                <label>HRL TXCW PC FLOAT 1 RN</label>
            </value>
            <value>
                <fullName>4759</fullName>
                <label>LAR TXCW PACT BLUE TEAM RN</label>
            </value>
            <value>
                <fullName>4763</fullName>
                <label>HRL TXCW PACT PURPLE TEAM RN</label>
            </value>
            <value>
                <fullName>4761</fullName>
                <label>HRL TXCW PACT SILVER TEAM RN</label>
            </value>
            <value>
                <fullName>4787</fullName>
                <label>MCA TXCW PACT ORANGE RN</label>
            </value>
            <value>
                <fullName>4764</fullName>
                <label>HRL TXCW PACT ORANGE TEAM RN</label>
            </value>
            <value>
                <fullName>4792</fullName>
                <label>MCA TXCW PACT GRAY RN</label>
            </value>
            <value>
                <fullName>4765</fullName>
                <label>HRL TXCW PACT BLUE TEAM RN</label>
            </value>
            <value>
                <fullName>4769</fullName>
                <label>CC TXCW SPOKE CVT RN</label>
            </value>
            <value>
                <fullName>4767</fullName>
                <label>HRL TXCW PACT GOLD TEAM RN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>