sfdx-source/main/default/objects/Triage__c/fields/Pain_Scale__c.field-meta.xml
<CustomField>
    <fullName>Pain_Scale__c</fullName>
    <description>Part of Vitals Intake</description>
    <label>Pain Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>0 (No Pain)</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 (Moderate to Severe Pain)</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 (Moderate to Severe Pain)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 (Moderate to Severe Pain)</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 (Severe Pain)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9 (Severe Pain)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 (Severe Pain)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>