sfdx-source/main/default/objects/Triage__c/fields/Patient_Flag__c.field-meta.xml
<CustomField>
    <fullName>Patient_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Flag</label>
    <type>Checkbox</type>
</CustomField>