sfdx-source/main/default/objects/Triage__c/fields/Patient_Local_Pid__c.field-meta.xml
<CustomField>
    <fullName>Patient_Local_Pid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Local Pid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>