sfdx-source/main/default/objects/Triage__c/fields/Patient_Messages_Call_Made_Before__c.field-meta.xml
<CustomField>
    <fullName>Patient_Messages_Call_Made_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to track whether a call to VDIF was made before to retrieve the patient&apos;s flag messages.</description>
    <label>Patient Messages Call Made Before</label>
    <type>Checkbox</type>
</CustomField>