sfdx-source/main/default/objects/Triage__c/fields/Patient_Vitals__c.field-meta.xml
<CustomField>
    <fullName>Patient_Vitals__c</fullName>
    <description>Field to hold the Patient Vitals returned from the VDIF Vital Search callout</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Patient Vitals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>