sfdx-source/main/default/objects/Triage__c/fields/Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note__c</fullName>
    <label>Progress Note Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11011</fullName>
                <label>EK-PACT WALK-IN</label>
            </value>
            <value>
                <fullName>1473</fullName>
                <label>UNSCHEDULED &lt;NURSING NON-MEDICAL UNSCHEDULED VISIT-TXCW&gt;</label>
            </value>
            <value>
                <fullName>1647</fullName>
                <label>UNSCHEDULED &lt;NURSING UNSCHEDULED VISIT&gt;</label>
            </value>
            <value>
                <fullName>2732</fullName>
                <label>UNSCHEDULED &lt;NURSING UNSCHEDULED VISIT-TXCW&gt;</label>
            </value>
            <value>
                <fullName>3754</fullName>
                <label>UNSCHEDULED &lt;PRIME CARE UNSCHEDULED NOTE&gt;</label>
            </value>
            <value>
                <fullName>4242</fullName>
                <label>UPDATE &lt;HCHV MONTHLY UPDATE NOTE&gt;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>