sfdx-source/main/default/objects/Triage__c/fields/Reason_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Visit__c</fullName>
    <label>Reason for Visit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Unscheduled</fullName>
            </value>
            <value>
                <fullName>Checkup</fullName>
                <isActive>false</isActive>
                <label>Checkup</label>
            </value>
            <value>
                <fullName>First-time Visit</fullName>
                <isActive>false</isActive>
                <label>First-time Visit</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Symptom</fullName>
                <isActive>false</isActive>
                <label>Symptom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>