sfdx-source/main/default/objects/Triage__c/fields/Submitted_Note__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Note__c</fullName>
    <description>Final Note Submitted to CPRS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>