sfdx-source/main/default/objects/Triage__c/fields/Suicidal_Homicidal__c.field-meta.xml
<CustomField>
    <fullName>Suicidal_Homicidal__c</fullName>
    <label>Suicidal/Homicidal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>Yes (described in Nurse Notes)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>