sfdx-source/main/default/objects/Triage__c/fields/System_Triage_Class__c.field-meta.xml
<CustomField>
    <fullName>System_Triage_Class__c</fullName>
    <description>System suggested Point-of-care score defining urgency.</description>
    <inlineHelpText>System suggested Point-of-care score defining urgency.</inlineHelpText>
    <label>System Triage Class</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>