sfdx-source/main/default/objects/Triage__c/fields/Systolic_Blood_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Systolic_Blood_Pressure__c</fullName>
    <label>Systolic Blood Pressure</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>