sfdx-source/main/default/objects/Triage__c/fields/Triage_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Triage_Complete_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Triage Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>