sfdx-source/main/default/objects/Triage__c/fields/Triage_Status__c.field-meta.xml
<CustomField>
    <fullName>Triage_Status__c</fullName>
    <label>Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake Complete</fullName>
            </value>
            <value>
                <fullName>Screening Complete</fullName>
            </value>
            <value>
                <fullName>Vitals Complete</fullName>
            </value>
            <value>
                <fullName>TXC Complete</fullName>
            </value>
            <value>
                <fullName>Assessment Complete</fullName>
            </value>
            <value>
                <fullName>Note Submitted</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
                <isActive>false</isActive>
                <label>Checked In</label>
            </value>
            <value>
                <fullName>Triage Complete</fullName>
                <isActive>false</isActive>
                <label>Triage Complete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>