sfdx-source/main/default/objects/Triage__c/fields/TXC_Process_Completed__c.field-meta.xml
<CustomField>
    <fullName>TXC_Process_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that TXC component was called successfully.</description>
    <label>TXC Process Completed</label>
    <type>Checkbox</type>
</CustomField>