sfdx-source/main/default/objects/Triage__c/fields/Vitals_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Vitals_Complete_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vitals Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>