sfdx-source/main/default/objects/Triage__c/validationRules/CIP_Triage_RespiratoryRate.validationRule-meta.xml
<ValidationRule>
    <fullName>CIP_Triage_RespiratoryRate</fullName>
    <active>false</active>
    <description>CIP Triage Respiratory Rate: Value should be between 0 and 99</description>
    <errorConditionFormula>Respiratory_Rate__c &lt; 0 || Respiratory_Rate__c &gt; 99</errorConditionFormula>
    <errorDisplayField>Respiratory_Rate__c</errorDisplayField>
    <errorMessage>Please enter a value between 0 and 99</errorMessage>
</ValidationRule>