sfdx-source/main/default/objects/Triage__c/validationRules/CIP_Triage_SerumGlucose.validationRule-meta.xml
<ValidationRule>
    <fullName>CIP_Triage_SerumGlucose</fullName>
    <active>false</active>
    <description>CIP Triage Serum Glucose: Value should be between 0 and 999</description>
    <errorConditionFormula>Serum_Glucose__c &lt; 0 || Serum_Glucose__c &gt; 999</errorConditionFormula>
    <errorDisplayField>Serum_Glucose__c</errorDisplayField>
    <errorMessage>Please enter a value between 0 and 999</errorMessage>
</ValidationRule>