sfdx-source/main/default/objects/Triage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Date_Time__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Last_4_SSN__c</columns>
    <columns>Triage_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>First_Name__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <label>All</label>
</ListView>