sfdx-source/main/default/objects/Triage__c/listViews/CIP_HarlingenCareClinic_Triage.listView-meta.xml
<ListView>
    <fullName>CIP_HarlingenCareClinic_Triage</fullName>
    <filterScope>Queue</filterScope>
    <label>CIP_HarlingenCareClinic</label>
    <queue>CIP_HarlingenCareClinic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>