sfdx-source/main/default/objects/Triage__c/listViews/CIP_LaredoOPC_Triage.listView-meta.xml
<ListView>
    <fullName>CIP_LaredoOPC_Triage</fullName>
    <filterScope>Queue</filterScope>
    <label>CIP_LaredoOPC</label>
    <queue>CIP_LaredoOPC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>