sfdx-source/main/default/objects/Triage__c/listViews/CIP_McAllenOPC_Triage.listView-meta.xml
<ListView>
    <fullName>CIP_McAllenOPC_Triage</fullName>
    <filterScope>Queue</filterScope>
    <label>CIP_McAllenOPC</label>
    <queue>CIP_McAllenOPC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>