sfdx-source/main/default/objects/Triage__c/listViews/Ready_for_Triage.listView-meta.xml
<ListView>
    <fullName>Ready_for_Triage</fullName>
    <columns>NAME</columns>
    <columns>Check_In_Date_Time__c</columns>
    <columns>Patient_Name__c</columns>
    <columns>Last_4_SSN__c</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_In_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Triage_Status__c</field>
        <operation>equals</operation>
        <value>Vitals Complete</value>
    </filters>
    <label>Vitals Complete</label>
</ListView>